# xpp-ltlf-learner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cnf.cpp  cnf.hpp  definitions.hpp  main.cpp  operators.txt  parser.cpp  parser.hpp  trace_generator.py  variable.hpp  varsDict.cpp  varsDict.hpp
Examples/BlindLearningExample/: README.txt
Examples/BlindLearningExample/stateBased/: sas_plan.10_trans_state  sas_plan.11_trans_state  sas_plan.14_trans_state  sas_plan.15_trans_state  sas_plan.16_trans_state  sas_plan.18_trans_state  sas_plan.19_trans_state  sas_plan.1_trans_state  sas_plan.20_trans_state  sas_plan.22_trans_state  sas_plan.23_trans_state  sas_plan.24_trans_state  sas_plan.7_trans_state
Examples/ContrastiveLearningExample/: README.txt
Examples/ContrastiveLearningExample/negativePlans/: sas_plan.1  sas_plan.10  sas_plan.10_trans  sas_plan.10_trans_transformed  sas_plan.11  sas_plan.11_trans  sas_plan.11_trans_transformed  sas_plan.12  sas_plan.12_trans  sas_plan.12_trans_transformed  sas_plan.13  sas_plan.13_trans  sas_plan.13_trans_transformed  sas_plan.14  sas_plan.14_trans  sas_plan.14_trans_transformed  sas_plan.15  (+58 more)
operators/: and.cpp  eventually.cpp  globally.cpp  globallyAnd.cpp  next.cpp  operator.hpp  operatorFactory.cpp  or.cpp  orderedSequencedVisit.cpp  release.cpp  sequencedVisit.cpp  until.cpp  wnext.cpp
operators/omegaOperators/: clauseBuilder.cpp  metaOperator.cpp  metaOperator.hpp  operatorParser.cpp  operatorParser.hpp  operatorTemplate.cpp  operatorTemplate.hpp
traceChecking/: automaton.cpp  automaton.hpp  traceChecker.cpp
(+112 files in other folders)
